Serilog+seq log server、Middle update、others

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "JwtSettings":{
+    "Issuer": "mtchen",
+    "SignKey": "a8df8xfjgrew0534kgfdkg93qr9ea90sfsdaifjr239r023rsd"
+  },
   "ConnectionStrings": {
       "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=ContosoUniversity;Integrated Security=True"
   },
